--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,8 +8,19 @@
   </head>
   <body>
     <!-- <div id="app"></div> -->
-    <h1 class="slogon">Utmost Emebed Demo</h1>
-    <iframe src="https://app.utmost.finance/" frameborder="1" id="utmost-iframe"></iframe>
+    <section class="slogon">
+      <h1 class="logo">Utmost Swap</h1>
+      <h4>
+        An omni-chain aggregator offers boundless trading commissions and the
+        Trading as Mining mechanism. Decentralized | Community-driven |
+        Omni-chain
+      </h4>
+    </section>
+    <iframe
+      src="https://app.utmost.finance/"
+      frameborder="1"
+      id="utmost-iframe"
+    ></iframe>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
